--- a/.gitignore
+++ b/.gitignore
@@ -39,10 +39,14 @@ lerna-debug.log*
 !.vscode/extensions.json
 
 # misc
+**/.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+# dist
+**/dist
 
 # production
 /build
